deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
  labels:
    app: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: assignmentfynd:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
