service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1
spec:
  type: NodePort
  selector:
    app: web1
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
