service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  type: NodePort
  selector:
    app: web2
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30081
