endtoenddeployment.yaml
# Web1 deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: myapp
        image: assignmentfynd:latest
        ports:
        - containerPort: 5000
---
# Web1 Service
apiVersion: v1
kind: Service
metadata:
  name: web1-svc
spec:
  type: NodePort
  selector:
    app: web1
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
	
# Web2 deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: myapp
        image: assignmentfynd:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: web2-svc
spec:
  type: NodePort
  selector:
    app: web2
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30081
	
# First Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: first-ingress
  annotations:
    kubernetes.io/ingress.class: first
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /myPodInfo
        backend:
          serviceName: web1-svc
          servicePort: 5000
      - path: /myPodInfo
        backend:
          serviceName: web2-svc
          servicePort: 5000
---
# Second Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: second-ingress
  annotations:
    kubernetes.io/ingress.class: second
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /myPodInfo
        backend:
          serviceName: web1-svc
          servicePort: 5000
      - path: /myPodInfo
        backend:
          serviceName: web2-svc
          servicePort: 5000
